security/kyverno-policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds: ["Pod"]
              namespaces: ["vault-forge"]
      validate:
        message: "Containers must set runAsNonRoot: true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
